Update styles to hide non-active children

--- a/style.less
+++ b/style.less
@@ -477,6 +477,11 @@ article {
 #submenu ul.children {
 	border-left: 1px solid @primary;
     margin-left: 7px;
+	display: none;
+}
+
+#submenu li.current_page_item ul.children {
+	display: block;
 }
 
 #submenu .breadcrumb {
