--- a/style.css
+++ b/style.css
@@ -77,7 +77,8 @@ article{padding-bottom:20px;margin-bottom:20px;border-bottom:1px dotted #a5a5a5;
 #content nav#submenu{width:22.5%;float:left;padding-right:2.5%;}
 #submenu #sub-navigation a{border-left:2px solid transparent;padding-left:5px;font-family:Lucida,Helvetica,Arial,sans-serif;text-decoration:none;color:#686868;margin-bottom:10px;display:block;}
 #submenu #sub-navigation li.current-menu-item a,#submenu #sub-navigation a:hover{border-color:#5ddbcf;color:#5ddbcf;}
-#submenu ul.children{border-left:1px solid #5ddbcf;margin-left:7px;}
+#submenu ul.children{border-left:1px solid #5ddbcf;margin-left:7px;display:none;}
+#submenu li.current_page_item ul.children{display:block;}
 #submenu .breadcrumb{margin-bottom:10px;padding-bottom:5px;border-bottom:2px solid #43a3a0;}
 #submenu .breadcrumb div{margin-left:5px;}
 #submenu .breadcrumb a{font-family:Lucida,Helvetica,Arial,sans-serif;text-decoration:none;color:#686868;margin-bottom:5px;}
