Synced styles with main

--- a/style.less
+++ b/style.less
@@ -474,6 +474,10 @@ article {
 	color:  @primary;
 }
 
+#submenu #sub-navigation li.current_page_item>a {
+	font-weight: bold;
+}
+
 #submenu ul.children {
 	border-left: 1px solid @primary;
     margin-left: 7px;
